# OpusTag

./: .dockerignore  .gitignore  Dockerfile  GEMINI.md  MANIFEST.in  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile
backend/routers/: library.py
backend/services/: itunes.py  tagger.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CoverPicker.tsx  MetadataEditor.tsx  Sidebar.tsx
frontend/src/views/: AlbumDetail.tsx  LibraryView.tsx  SearchView.tsx
opustag/: Dockerfile  cli.py  main.py
opustag/routers/: library.py  search.py
opustag/services/: tagger.py
opustag/static/: index.html
opustag/static/assets/: index-CtP9m1mJ.js  index-D81CfNOV.css
