[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opustag"
version = "0.2.0"
description = "A modern, elegant audio metadata manager designed specifically for classical music collectors."
authors = [
    {name = "Xiao Ran"}
]
maintainers = [
    {name = "Xiao Ran", email="xiaoran.007@icloud.com"},
]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "requests",
    "mutagen",
    "pydantic"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
urls = {homepage = "https://github.com/xiaoran007/OpusTag"}

[project.scripts]
opustag = "opustag.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["opustag*"]

[tool.setuptools.package-data]
opustag = ["static/**/*", "static/*"]
